--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -244,7 +244,7 @@
                 // link item hover state
                 &:hover {
                     background-color: $overlay-blue-darker;
-                    // border-color: hsla(100%, 100%, 100%, 0.250);
+                    border-color: hsla(100%, 100%, 100%, 0.250);
 
                     a {
                         background: $overlay-blue-light;
