--- a/scss/style.scss
+++ b/scss/style.scss
@@ -568,6 +568,17 @@ body {
 }
 // end of hero section
 
+// pad sectiion 
+#pad {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../img/pexels-magda-ehlers-2660262.jpg);
+    background-color: $overlay-blue-dark;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center bottom;
+    background-attachment: fixed;
+}
 // about 
 .about {
     // about container
@@ -582,7 +593,7 @@ body {
     text-align: center;
     margin: 0 auto;
     padding: 50px 10px 100px 10px;
-    background-color: $overlay-blue-light;
+    background-color: $overlay-blue-dark;
     
     // end of about container
     // col-right
