#pad media query

--- a/css/style.css
+++ b/css/style.css
@@ -1807,6 +1807,9 @@ body {
   background-size: contain;
   background-position: center bottom;
   background-attachment: fixed; }
+  @media (max-width: 768px) {
+    #pad {
+      background-size: 100%; } }
 
 .about {
   flex-direction: column-reverse;
