--- a/scss/style.scss
+++ b/scss/style.scss
@@ -579,7 +579,7 @@ body {
     background-position: center bottom;
     background-attachment: fixed;
     @media (max-width: 768px) {
-        background-size: 100%;
+        background-size: cover;
     }
 }
 // about 
