--- a/css/style.css
+++ b/css/style.css
@@ -1798,18 +1798,22 @@ body {
   100% {
     transform: translateY(0); } }
 
-#pad {
+.paralax {
   height: 100vh;
   width: 100vw;
-  background-image: url(../img/pexels-magda-ehlers-2660262.jpg);
   background-color: #29323c;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center bottom;
   background-attachment: fixed; }
-  @media (max-width: 768px) {
-    #pad {
-      background-size: cover; } }
+  .paralax.px1 {
+    background-image: url(../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg); }
+  .paralax.px2 {
+    background-image: url(../img/pexels-magda-ehlers-2660262.jpg); }
+  @media (max-width: 500px) {
+    .paralax {
+      background-size: contain;
+      background-position: center; } }
 
 .about {
   flex-direction: column-reverse;
