--- a/scss/style.scss
+++ b/scss/style.scss
@@ -579,6 +579,9 @@ body {
     background-attachment: fixed;
 
     &.px1 {
+        @media(min-width: 768px){
+            display: none;
+        }
         background-image: url(../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg);
     }
     &.px2 {
@@ -586,7 +589,7 @@ body {
     }
 
     @media (max-width: 500px) {
-        background-size: contain;
+        background-size: cover;
         background-position: center;
     }
 }
