--- a/css/style.css
+++ b/css/style.css
@@ -910,7 +910,7 @@ hamburger
       #projects .projects .all-projects .project-item:hover.project-item .project-img img {
         transform: scale(1.1); }
       #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
-        opacity: .7; }
+        opacity: .5; }
       #projects .projects .all-projects .project-item:hover.project-item .project-tile a i {
         transform: scale(1.15) translateX(0.5em); }
         #projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
@@ -1807,6 +1807,7 @@ body {
   background-position: center bottom;
   background-attachment: fixed; }
   .paralax.px1 {
+    height: 70vh;
     background-image: url(../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg); }
     @media (min-width: 768px) {
       .paralax.px1 {
@@ -1815,7 +1816,7 @@ body {
     background-image: url(../img/pexels-magda-ehlers-2660262.jpg); }
   @media (max-width: 500px) {
     .paralax {
-      background-size: cover;
+      background-size: 100%;
       background-position: center; } }
 
 .about {
