--- a/css/style.css
+++ b/css/style.css
@@ -577,14 +577,8 @@ hamburger
       #contact .contact .contact-items .contact-item:hover {
         transform: preserve-3d; }
       #contact .contact .contact-items .contact-item h1 {
-        background-image: linear-gradient(50deg, skyblue, #dc1489, skyblue, #dc1489, skyblue);
-        background-size: 300%;
-        background-clip: text;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-position: left;
-        animation: contact-h1 5s ease infinite alternate;
-        padding: .1em 1em;
+        color: #fff;
+        padding: .2em 1em;
         margin: .2em auto;
         font-size: 1.5em;
         font-weight: 600;
@@ -593,10 +587,6 @@ hamburger
           #contact .contact .contact-items .contact-item h1 {
             font-size: 1.7em;
             margin: .5em auto; } }
-
-@keyframes contact-h1 {
-  100% {
-    background-position: right; } }
         #contact .contact .contact-items .contact-item h1::before, #contact .contact .contact-items .contact-item h1:after {
           content: '';
           position: absolute;
@@ -604,11 +594,10 @@ hamburger
           left: 0;
           width: 100%;
           height: 100%;
-          background: #f4f4f4;
+          background-color: #29323c;
           z-index: -1;
           border-radius: 10px;
-          transition: .5s ease; }
-        #contact .contact .contact-items .contact-item h1::before {
+          transition: .5s ease;
           box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a; }
       #contact .contact .contact-items .contact-item .icon {
         margin: 5px auto 10px auto;
