--- a/css/style.css
+++ b/css/style.css
@@ -1802,11 +1802,12 @@ body {
       .paralax.px1 {
         display: none; } }
   .paralax.px2 {
+    height: 80vh;
     background-image: url(../img/pexels-magda-ehlers-2660262.jpg); }
   @media (max-width: 500px) {
     .paralax {
       background-size: 100%;
-      background-position: center; } }
+      background-position: center bottom; } }
 
 .about {
   flex-direction: column-reverse;
