--- a/css/style.css
+++ b/css/style.css
@@ -1803,7 +1803,10 @@ body {
         display: none; } }
   .paralax.px2 {
     height: 80vh;
-    background-image: url(../img/pexels-magda-ehlers-2660262.jpg); }
+    background-image: url(../img/me.jpg); }
+  .paralax.px3 {
+    height: 80vh;
+    background-image: url(../img/shakexblue.jpg); }
   @media (max-width: 500px) {
     .paralax {
       background-size: 100%;
@@ -1962,6 +1965,7 @@ body {
       transform: translateY(100%);
       opacity: 1; }
   .about .col-left {
+    display: none;
     width: 100%;
     height: 360px;
     margin-top: 0;
