read more button

--- a/css/style.css
+++ b/css/style.css
@@ -1903,7 +1903,7 @@ body {
     .about .col-right article.about-article {
       padding: .5em 1em;
       height: 10vh;
-      overflow: auto;
+      overflow: hidden;
       transition: .3s ease; }
       @media (max-width: 768px) {
         .about .col-right article.about-article {
