--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -171,10 +171,10 @@
                     // h2
                     h2 {
                         font-size: .8em;
-                        line-height: 2rem;
+                        line-height: 1.3;
                         font-weight: 600;
                         letter-spacing: .1em;
-                        padding: .1em 1em;
+                        padding:  1em;
                         border: none;
                         outline: none;
                         border-radius: 10px;
@@ -183,6 +183,13 @@
                         transition: .5s ease;
                         position: relative;
                         z-index: -1;
+
+                        span {
+                            display: block;
+                            margin-top: .2em;
+                            color: $text-black;
+                            opacity: .8;
+                        }
                         
                         @media (min-width: 768px){
                             width: 100%;
