--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -49,13 +49,22 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                cursor: pointer;
                 position: relative;
                 transform: preserve-3d;
                 border: none;
                 outline: none;
                 // transform: scale(.9);
                 transition: .8s ease;
+                // cursors
+                &:nth-child(1){
+                    cursor: help;
+                }
+                &:nth-child(2){
+                    cursor: alias;
+                }
+                &:nth-child(3){
+                    cursor: alias;
+                }
                 // item box shadows
                 &::after {
                     position: absolute;
@@ -228,6 +237,7 @@
                         background-color: $link-crimson-dark;
                         color: $text-white-e;
                         opacity: .8;
+                        cursor: pointer;
                         transition: .5s ease;
                         position: relative;
                         box-shadow: inset 2px 2px 4px #fffa,
