--- a/css/style.css
+++ b/css/style.css
@@ -1803,6 +1803,9 @@ body {
   background-size: contain;
   background-position: center bottom;
   background-attachment: fixed; }
+  .paralax.paralax-hero {
+    background-image: url(/img/shakex-logo-min.png);
+    background-position: center; }
   .paralax.px1 {
     height: 70vh;
     background-image: url(../img/nadine-shaabana-0xD40qm07X0-unsplash-min.jpg); }
