--- a/scss/style.scss
+++ b/scss/style.scss
@@ -578,7 +578,7 @@ body {
     background-position: center bottom;
     background-attachment: fixed;
     &.paralax-hero {
-        background-image: url(/img/shakex-logo-min.png);
+        background-image: url(../img/shakex-logo-min.png);
         background-position: center;
     }
     &.px1 {
